Moonshot/res/tests/conditions/bad/condition_3.fox
if(false)
	foo = "if!";
else if
{
}